# checkboxes

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.github/workflows/: build-multiple-runners.yaml
src/: config.rs  main.rs  model.rs  redis_handler.rs  routes.rs  utils.rs  websocket.rs
static/: index.html
