[package]
name = "checkboxes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
actix-cors = "0.7"
redis = { version="0.26.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
log = "0.4.22"
rand = "0.8.5"
