[package]
name = "checkboxes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
redis = { version = "0.26.1", features = ["tokio-comp"] }
tokio-stream = "0.1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
envy = "0.4.2"
lazy_static = "1.5.0"